<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Audiometry Made Easy</string>
    <string name="action_settings">Settings</string>
    <string name="main_menu_greeting">Audiometry Made Easy</string>
    <string name="main_menu_greeting_body">Quick and Simple Hearing Evaluation</string>
    <string name="button_start">Begin Test</string>
    <string name="button_acknowledgements">Acknowledgements</string>
    <string name="title_activity_pre_test_information">Before We Begin</string>
    <string name="pretest_title">Instructions</string>
    <string name="pretest_info_body">Before the audiometry test is performed, the headphones must be calibrated. Ensure that the headphones being used are firmly plugged into the headphone jack. Press the button below when you\'re ready to see calibration instructions. Once the headphones are calibrated, you can begin the audiometry test.</string>
    <string name="pretest_button">Calibration Instructions</string>
    <string name="title_activity_test_proctoring">Tap When You Hear A Beep</string>
    <string name="hello_world">Test in Progress!</string>
    <string name="title_activity_test_proctoring_revised">Test Has Begun!</string>
    <string name="title_activity_export_data">Export Data</string>
    <string name="button_export">Test Results</string>
    <string name="title_activity_test_complete">Test Complete!</string>
    <string name="email_hint">Recipient Email</string>
    <string name="export_test_title">Export Test Results</string>
    <string name="test_proctoring_information">This audiometry test is a simple procedure designed to evaluate your hearing capabilities. Once the test begins, you will hear beeps of various pitches and volumes. Every time you hear a beep, simply tap the screen. That\'s it! Tap the button below when you\'re ready to begin.</string>

    <color name="orange">#FF8000</color>
    <color name="primary">#FF8000</color>
    <color name="primary_dark">#ffc96500</color>
    <color name="accent">#FFFFFF</color>
    <color name="dark_orange">#bb4000</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#888888</color>
    <color name="green">#adce49</color>
    <color name="background_grey">#424242</color>

    <string name="title_activity_pre__calibration">Pre-Calibration</string>
    <string name="button_calibration">Calibration</string>
    <string name="pre_calibration_title">Audiometer Calibration</string>
    <string name="pre_calibration_info_body">In order to get accurate readings from the audiometer, your headphones must be calibrated. Please plug in your headphones into the headphone jack on your device. Place your headphone speakers about 1.8 cm, or the width of your thumb, from your device microphone as shown in the diagram below. For best results, perform this calibration in a quiet room. Tap the button below when you\'re ready to begin!</string>
    <string name="button_begin_calibration">Begin Calibration</string>
    <string name="title_activity_calibration">Calibration</string>
    <string name="calibration_in_progress">Calibrating...</string>
    <string name="test_complete_title">Test Complete!</string>
    <string name="test_complete_body">Do you want to keep your results?</string>
    <string name="test_complete_button_yes">Yes</string>
    <string name="test_complete_button_no">No</string>
    <string name="export_body">Please enter the email address you would like to send the test results to.</string>
    <string name="title_activity_export_complete">ExportComplete</string>
    <string name="export_data_complete_title">Data Export Complete!</string>
    <string name="export_data_complete_button">Return to Home</string>
    <string name="title_activity_calibration_complete">CalibrationComplete</string>
    <string name="calibration_complete_title">Calibration Complete!</string>
    <string name="calibration_complete_body">Now that calibration is complete, you can take the audiometry test. This audiometry test is a simple procedure designed to evaluate your hearing capabilities. Once the test begins, you will hear beeps of various pitches and volumes. Every time you hear a beep, simply tap the screen. That\'s it! Tap the button below when you\'re ready to begin.</string>
    <string name="calibration_complete_button">Start Test</string>
    <string name="export_data_complete_caveat">If you can\'t find the test results in your inbox, be sure to check your junk or spam folder.</string>
    <string name="title_activity_acknowledgements">Acknowledgements</string>
    <string name="acknowledgements_title">Acknowledgements</string>
    <string name="developer">Developer: Reece Stevens</string>
    <string name="special_thanks">Special thanks to: Pato Lankenau, Davin Siu, and James Yao</string>
    <string name="reason">Developed for Texas Engineering World Health as a submission for the 2014 EWH Design Competition.</string>
    <string name="final_notes">Questions or concerns about the app? Email reecestevens@utexas.edu.</string>
    <string name="title_activity_export_error">ExportError</string>
    <string name="export_error_title">Oops!</string>
    <string name="export_error_body">Export seems to have run into a problem. Please check your internet connection and try again. You can access your results at any time through the Test Results page and email from there!</string>
    <string name="export_error_button">Back to Main Menu</string>
    <string name="title_activity_test_lookup">Test Results</string>
    <string name="title_activity_test_data">Test Data</string>
    <string name="email_option">Email Test Results</string>

</resources>
