<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_grey"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="ut.ewh.audiometrytest.Acknowledgements">

    <TextView
        android:text="@string/acknowledgements_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#FF8000"
        android:gravity="center"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developer"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/special_thanks"
        android:layout_marginTop="20sp"

        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:layout_marginTop="20sp"

        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_notes"
        android:layout_marginTop="20sp"

        android:textSize="20sp"
        android:textColor="#FFFFFF"
        />



</LinearLayout>
