
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:background="#424242"
tools:context=".MainActivity"
android:orientation="vertical"
android:gravity="center">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_menu_greeting"
    android:textSize="30sp"
    android:textStyle="bold"
    android:textColor="#FF8000"
    android:layout_marginBottom="20sp"
    android:gravity="center"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/main_menu_greeting_body"
    android:textSize="20sp"
    android:textColor="#FFFFFF"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_start"
    android:onClick="gotoPretest"
    android:background="#FF8000"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="20sp"
    android:paddingBottom="20sp"
    android:layout_marginTop="30sp"
    android:layout_marginBottom="30sp"/>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_export"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="20sp"
    android:paddingBottom="20sp"
    android:onClick="gotoExport"
    android:background="#FF8000"/>

</LinearLayout>