<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".PreTestInformation"
android:background="#424242"
android:orientation="vertical"
android:gravity="center">

<TextView
    android:id="@+id/pretest_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/pretest_title"
    android:textSize="30sp"
    android:textStyle="bold"
    android:textColor="#FF8000"/>

<TextView
    android:id="@+id/pretest_info_body"
    android:layout_marginTop="15sp"
    android:layout_marginBottom="15sp"
    android:layout_width="264dp"
    android:layout_height="270dp"
    android:textSize="20sp"
    android:text="@string/pretest_info_body"
    android:textColor="#FFFFFF"
    android:gravity="center"/>

<Button
    android:id="@+id/pretest_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/pretest_button"
    android:onClick="beginTest"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:paddingTop="20sp"
    android:paddingBottom="20sp"
    android:background="#FF8000"/>

</LinearLayout>
