<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin_altered"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:background="@color/background_grey"
    tools:context="ut.ewh.audiometrytest.ExportError">

    <TextView
        android:text="@string/export_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_error_body"
        android:layout_marginRight="10sp"
        android:layout_marginBottom="15sp"
        android:textSize="20sp"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/doneButton"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/export_error_button"
        android:layout_gravity="right"
        android:background="@drawable/button_background"
        android:gravity="left"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="20sp"
        android:paddingBottom="20sp"
        android:onClick="gotoMain"

        />



</LinearLayout>
