<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin_altered"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_grey"
    tools:context="ut.ewh.audiometrytest.ExportData"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <TextView
        android:text="@string/export_test_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginBottom="20sp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/orange"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/export_body"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginRight="16sp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        />

        <Button
            android:id="@+id/doneButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="Send"
            android:layout_gravity="right"
            android:background="@drawable/button_background"
            android:gravity="left"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"

            />



</LinearLayout>