<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin_altered"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_grey"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="ut.ewh.audiometrytest.CalibrationComplete">

    <TextView
        android:text="@string/calibration_complete_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left"
        android:textSize="40sp"
        android:textColor="@color/orange"
        android:textStyle="bold"
        android:id="@+id/textView" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/pre_calibration_info_body"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/calibration_complete_body"
                android:textColor="#FFFFFF" />
            <Button
                android:id="@+id/pretest_button"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:text="@string/calibration_complete_button"
                android:onClick="startTest"
                android:paddingLeft="10sp"
                android:paddingRight="30sp"
                android:paddingTop="20sp"
                android:paddingBottom="20sp"
                android:background="@drawable/button_background"
                android:layout_gravity="right"
                android:gravity="left"
                />
            </LinearLayout>
    </ScrollView>

</LinearLayout>
