
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin_altered"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_grey"
    tools:context="ut.ewh.audiometrytest.Pre_Calibration"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >
        <TextView
            android:id="@+id/pre_calibration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pre_calibration_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FF8000"/>
         <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

              <TextView
                android:id="@+id/pre_calibration_info_body"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="15sp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/pre_calibration_info_body"
                android:textColor="#FFFFFF" />

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:src="@drawable/calibration_diagram"
                  android:adjustViewBounds="true" />


               <Button
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:text="@string/button_begin_calibration"
                android:background="@drawable/button_background"
                android:layout_gravity="right"
                android:gravity="left"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:paddingTop="20sp"
                android:paddingBottom="20sp"
                android:onClick="gotoCalibration"
                />
           </LinearLayout>
         </ScrollView>

</LinearLayout>
